# bibicode

./: Cargo.toml  LICENSE-MIT  README.md
doc/: aliases.js  search-index.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/lib/: BibiCoder.t.html  BibiError.t.html  NumeralSystem.t.html  all.html  bibi_nums.v.html  bin_nums.v.html  bitcoin_nums.v.html  budu_nums.v.html  chinese_nums.v.html  dec_nums.v.html  enum.BibiError.html  fn.bibi_nums.html  fn.bin_nums.html  fn.bitcoin_nums.html  fn.budu_nums.html  fn.chinese_nums.html  fn.dec_nums.html  fn.hex_nums.html  fn.utf8_nums.html  hex_nums.v.html  index.html  sidebar-items.js  struct.BibiCoder.html  struct.NumeralSystem.html  utf8_nums.v.html
doc/src/lib/: lib.rs.html
examples/: base10.json  base4.json  base5.json  base6.json  base7.json  base8.json  base9.json  bibi.json  bitcoin-P2PKH.json  bitcoin-P2SH.json  hex.json
src/: bibic.yaml  lib.rs  main.rs
