[package]
name = "bibicode"
version = "0.2.1"
authors = ["Florent Jugla <florent@jugla.name>"]
license = "MIT"
description = "A crate to convert any integer from one numeral system to another."
readme="README.md"
repository = "https://github.com/flojug/bibicode"
categories = ["algorithms", "encoding"]

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
indexmap = "1.0.2"
