[package]
name = "bibicode"
version = "0.3.0"
authors = ["Florent Jugla <florent@jugla.name>"]
license = "MIT"
description = "A crate to convert any natural number from one numeral system to another."
readme="README.md"
repository = "https://github.com/flojug/bibicode"
categories = ["algorithms", "encoding"]
keywords=["conversion", "binary", "hexadecimal", "decimal", "octal"]

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
indexmap = "1.0.2"
xdg = "2.2.0"
regex = "1.1.6"
